--- a/css/play.css
+++ b/css/play.css
@@ -32,11 +32,10 @@ p.playtitle {
 section.play {
 	border-style:solid;
 }
-
 a.menu {
   position:fixed;
-  top:0;
-  right:0;
+  top:0px;
+  right:80px;
   color:white;
   padding: .6rem;
   color:white;
@@ -46,18 +45,35 @@ a.menu {
   margin:0;
 }
 
+a.menu:hover {
+  color:red;
+  cursor:pointer;
+}
+.contents {
+  position: fixed;
+  top:0;
+  left:0;
+  float: right;
+  width:100%;
+  background: black;
+  font-family: verdana, sans-serif;
+  font-size:.8em;
+  height:2.4rem;
+}
+
 ul.TOC-Heading-1 {
+  position:fixed;
+  top:0px;
+right: 80px;
 	color:#000000;
 	font-family:"Avenir Medium", sans-serif;
-	font-size:16px;
+	font-size:20px;
 	font-style:normal;
 	font-variant:normal;
 	font-weight:500;
 	line-height:1.129;
 	margin-bottom:6px;
-	margin-left:0;
-	margin-right:0;
-	margin-top:0;
+
 
 }
 p.TOC-Heading-2 {
