--- a/css/styles.css
+++ b/css/styles.css
@@ -20,6 +20,7 @@ img.playimage {
 /* you will need a width attribute in here */
 max-width:40%;
 padding:20px auto;
+text-align: center;
 }
 
 img.shakespeareimage {
