Updated website from my pc

--- a/css/play.css
+++ b/css/play.css
@@ -36,7 +36,14 @@ h1 a, h2 a {
   display:block;
   background: white;
 }
+img.center {display: block;
+  margin-left: auto;
+  margin-right: auto;
+  }
 
+	img.portrait {
+		width:60%;
+	}
 
 a.menu {
   position:fixed;
